; ModuleID = '/home/carl/AnghaBench/libgit2/tests/clone/extr_nonetwork.c_clone_cancel_checkout_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/clone/extr_nonetwork.c_clone_cancel_checkout_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*, i32*, i32*, i8*)* @clone_cancel_checkout_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clone_cancel_checkout_cb(i32* %0, i8* %1, i32* %2, i32* %3, i32* %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i8* %5, i8** %13, align 8
  %15 = load i8*, i8** %13, align 8
  store i8* %15, i8** %14, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @GIT_UNUSED(i32* %16)
  %18 = load i32*, i32** %10, align 8
  %19 = call i32 @GIT_UNUSED(i32* %18)
  %20 = load i32*, i32** %11, align 8
  %21 = call i32 @GIT_UNUSED(i32* %20)
  %22 = load i32*, i32** %12, align 8
  %23 = call i32 @GIT_UNUSED(i32* %22)
  %24 = load i8*, i8** %9, align 8
  %25 = load i8*, i8** %14, align 8
  %26 = call i32 @strcmp(i8* %24, i8* %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %6
  store i32 -12345, i32* %7, align 4
  br label %30

29:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %30

30:                                               ; preds = %29, %28
  %31 = load i32, i32* %7, align 4
  ret i32 %31
}

declare dso_local i32 @GIT_UNUSED(i32*) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
